--- a/app/components/greeting.scss
+++ b/app/components/greeting.scss
@@ -2,6 +2,89 @@
    position: absolute;
    left: 50%;
 //    will-change: transform, top;
-   transform: translate(-50%, 0%);
+   transform: translate(-50%, -50%);
    cursor: default;
+}
+
+.title {
+    color: #6E4EFF;
+    overflow: visible;
+    will-change: letter-spacing;
+    -webkit-font-smoothing: antialiased;
+}
+
+.title0 {
+    font-weight: 200;
+    font-size: 8rem;
+    line-height: 5rem;
+    padding-left: 0.4rem;
+}
+
+.title1 {
+    font-weight: 400;
+    font-size: 3rem;
+    line-height: 5rem;
+    padding-left: 0.7rem;
+}
+
+.title2 {
+    font-weight: 100;
+    font-size: 13rem;
+    line-height: 10rem;
+    padding-left: 1.4rem;
+}
+
+.title3 {
+    font-weight: 100;
+    font-size: 8rem;
+    font-style: italic;
+    line-height: 7rem;
+    padding-right: 1rem; 
+}
+
+.title4 {
+    font-weight: 900;
+    font-size: 2rem;
+    line-height: 2rem;
+    padding-right: 0.05rem;
+}
+
+.title5 {
+    font-weight: 100;
+    font-size: 5rem;
+    line-height: 4rem;
+    padding-right: 0.15rem;
+}
+
+.title6 {
+    font-weight: 600;
+    font-size: 2rem;
+    line-height: 2rem;
+}
+
+.title7 {
+    font-weight: 100;
+    font-size: 3rem;
+    line-height: 3rem;
+    padding-left: 0.3rem;
+}
+
+
+.guideOne {
+    position: absolute;
+    z-index: 99999999;
+    top: 0;
+    left: calc(50% - 225px);
+    height: 100%;
+    width: 1px;
+    background: #FC8; // #FFF;
+}
+.guideTwo {
+    position: absolute;
+    z-index: 99999999;
+    top: 0;
+    right: calc(50% - 225px);
+    height: 100%;
+    width: 1px;
+    background: #FC8; // #FFF;
 }
