default commit message

--- a/app/components/about.scss
+++ b/app/components/about.scss
@@ -18,23 +18,7 @@
     height: 50%;
 }
 
-.cHeader {
-    display: block;
-    margin: 0 auto 0 0;
-    min-width: 80%;
-    min-height: 1rem;
-    .divider {
-        padding: 5px 0;
-        width: 100%;
-        border-top: solid #999 1px;
-    }
-}
-
-.cTitle {
-    font-size: 1.3rem;
-    text-transform: uppercase;
-}
-
 .cContent {
-    width: 15rem;
+    // width: 15rem;
+    // max-height: 290px;
 }
