--- a/app/components/about.scss
+++ b/app/components/about.scss
@@ -3,6 +3,8 @@
     height: 50%;
     margin: 0 10px;
     background-color: #F4F4F4;
+    overflow: hidden;
+    box-shadow: #000 0px 1px 7px -3px inset;
 }
 
 .bgLayer {
@@ -13,9 +15,12 @@
 .cWrap {
     position: relative;
     display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
     justify-content: space-between;
     width: 100%;
     height: 50%;
+    transition: all .218s ease-in;
 }
 
 .cContent {
