--- a/app/components/about.scss
+++ b/app/components/about.scss
@@ -1,7 +1,7 @@
 .plaxWrap {
     width: 100%;
     height: 50%;
-    margin: 0 10px;
+    margin: 0 16px;
     background-color: #F4F4F4;
     overflow: hidden;
     box-shadow: #000 0px 1px 7px -3px inset;
@@ -17,13 +17,8 @@
     display: flex;
     flex-wrap: wrap;
     align-items: stretch;
-    justify-content: space-between;
+    // justify-content: space-between;
     width: 100%;
     height: 50%;
     transition: all .218s ease-in;
-}
-
-.cContent {
-    // width: 15rem;
-    // max-height: 290px;
 }
