--- a/app/components/about.scss
+++ b/app/components/about.scss
@@ -1,8 +1,47 @@
+$bgColor: #F4F4F4;
+
+.droneBtn {
+    box-sizing: border-box;
+    position: relative;
+    z-index: 1;
+    float: left;
+    color: #c8c8c8;
+    margin: 15px;
+    padding: 0 16px;
+    outline: none;
+    font-weight: 700;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 2px;
+    border-style: solid;
+    border-color: transparent;
+    border-image: initial;
+    min-height: 32px;
+    // border-top: solid 1px $bgColor;
+    // border-left: solid 1px $bgColor;
+    background: transparent;
+    cursor: pointer;
+    transition: color 200ms cubic-bezier(0.4, 0, 0.2, 1),
+                background 200ms cubic-bezier(0.4, 0, 0.2, 1),
+                box-shadow 400ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:active {
+        box-shadow: rgba(0, 0, 0, 0.14) 0px 4px 5px 0px,
+                    rgba(0, 0, 0, 0.12) 0px 1px 10px 0px,
+                    rgba(0, 0, 0, 0.2) 0px 2px 4px -1px;
+    }
+    &:hover {
+        color: #ccc;
+        box-shadow: rgba(0, 0, 0, 0.14) 0px 2px 2px 0px,
+                    rgba(0, 0, 0, 0.12) 0px 3px 1px -2px,
+                    rgba(0, 0, 0, 0.2)  0px 1px 5px 0px;
+    }
+}
+
 .plaxWrap {
     width: 100%;
     height: 50%;
     margin: 0 16px;
-    background-color: #F4F4F4;
+    background-color: $bgColor;
     overflow: hidden;
     box-shadow: #000 0px 1px 7px -3px inset;
 }
@@ -17,7 +56,6 @@
     display: flex;
     flex-wrap: wrap;
     align-items: stretch;
-    // justify-content: space-between;
     width: 100%;
     height: 50%;
     transition: all .218s ease-in;
