--- a/app/components/about.scss
+++ b/app/components/about.scss
@@ -4,7 +4,7 @@ $bgColor: #F4F4F4;
     box-sizing: border-box;
     position: relative;
     z-index: 1;
-    float: left;
+    float: right;
     color: #c8c8c8;
     margin: 15px;
     padding: 0 16px;
@@ -17,8 +17,6 @@ $bgColor: #F4F4F4;
     border-color: transparent;
     border-image: initial;
     min-height: 32px;
-    // border-top: solid 1px $bgColor;
-    // border-left: solid 1px $bgColor;
     background: transparent;
     cursor: pointer;
     transition: color 200ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -30,10 +28,22 @@ $bgColor: #F4F4F4;
                     rgba(0, 0, 0, 0.2) 0px 2px 4px -1px;
     }
     &:hover {
-        color: #ccc;
         box-shadow: rgba(0, 0, 0, 0.14) 0px 2px 2px 0px,
                     rgba(0, 0, 0, 0.12) 0px 3px 1px -2px,
                     rgba(0, 0, 0, 0.2)  0px 1px 5px 0px;
+    }
+    &.clicked {
+        color: #e5e5e5;
+        &:active {
+            box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 5px 0px,
+                        rgba(0, 0, 0, 0.05) 0px 1px 10px 0px,
+                        rgba(0, 0, 0, 0.13) 0px 2px 4px -1px;
+        }
+        &:hover {
+            box-shadow: rgba(0, 0, 0, 0.07) 0px 2px 2px 0px,
+                        rgba(0, 0, 0, 0.05) 0px 3px 1px -2px,
+                        rgba(0, 0, 0, 0.13)  0px 1px 5px 0px;
+        }
     }
 }
 
