--- a/app/components/about.scss
+++ b/app/components/about.scss
@@ -47,7 +47,7 @@ $bgColor: #F4F4F4;
     }
 }
 
-.plaxWrap {
+.topHalf {
     width: 100%;
     height: 50%;
     margin: 0 16px;
@@ -61,7 +61,7 @@ $bgColor: #F4F4F4;
     height: 100%;
 }
 
-.cWrap {
+.bottomHalf {
     position: relative;
     display: flex;
     flex-wrap: wrap;
