--- a/app/components/about.scss
+++ b/app/components/about.scss
@@ -5,12 +5,15 @@ $bgColor: #F4F4F4;
     position: relative;
     z-index: 1;
     float: right;
-    color: #c8c8c8;
+    color: #9f9f9f;
     margin: 15px;
     padding: 0 16px;
     outline: none;
-    font-weight: 700;
+    font-weight: 200;
+    font-family: 'Raleway', sans-serif;
+    text-transform: uppercase;
     line-height: 30px;
+    letter-spacing: 0.6px;
     text-align: center;
     border-radius: 2px;
     border-style: solid;
@@ -33,7 +36,7 @@ $bgColor: #F4F4F4;
                     rgba(0, 0, 0, 0.2)  0px 1px 5px 0px;
     }
     &.clicked {
-        color: #e5e5e5;
+        color: #c0c0c0;
         &:active {
             box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 5px 0px,
                         rgba(0, 0, 0, 0.05) 0px 1px 10px 0px,
@@ -47,7 +50,7 @@ $bgColor: #F4F4F4;
     }
 }
 
-.topHalf {
+.parallaxWrap {
     width: 100%;
     height: 50%;
     margin: 0 16px;
@@ -62,11 +65,25 @@ $bgColor: #F4F4F4;
 }
 
 .bottomHalf {
-    position: relative;
     display: flex;
     flex-wrap: wrap;
     align-items: stretch;
     width: 100%;
     height: 50%;
     transition: all .218s ease-in;
+}
+
+.cardWrap {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    width: 100%;
+    height: 62%;
+}
+
+.content {
+    margin: 16px;
+    padding: 12px 15px 15px;
+    width: 100%;
 }
