--- a/app/components/cards/cards.scss
+++ b/app/components/cards/cards.scss
@@ -1,17 +1,22 @@
 
 .cContent {
+    box-sizing: border-box;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
-    padding: 9px 15px 0;
+    display: flex;
+    flex-direction: column;
+    align-content: stretch;
+    width: 100%;
+    padding: 0 15px;
     letter-spacing: initial;
     line-height: 1.1rem;
     overflow: hidden;
     &.clicked {
         position: relative;
         padding: 0;
-        max-width: 100%;
+        // max-width: 100%;
     }
     .inlineLink {
         cursor: pointer;
@@ -34,48 +39,58 @@
             }
         }
     }
+    .contentBlock {
+        flex-grow: 0.62;
+        padding: 0 0 23px;
+        font-size: 1.3rem;
+        line-height: 1.5rem;
+        letter-spacing: 0.38px;
+        font-family: 'Raleway', sans-serif;
+    }
 }
 
 .linksWrap {
     font-family: 'Raleway';
     box-sizing: border-box;
-    display: flex;
-    align-self: center;
-    justify-content: space-between;
-    text-align: center;
-    float: left;
-    width: 90%;
-    margin-right: 10%;
     color: rgba(0,0,0,0.38);
-    padding: 0 0 15px 0;
     &.clicked {
     }
-    :first-child {
-        text-align: left;
-    }
-    :last-child {
-        text-align: right;
-    }
     .icon {
-        flex-grow: 1;
         display: inline-block;
         cursor: pointer;
         font-family: inherit;
         text-decoration: none;
-        font-weight: 500;
-        border-radius: 3px;
+        text-transform: uppercase;
+        font-weight: 400;
+        font-size: 0.9rem;
+        letter-spacing: 1.1px;
+        margin: 0 5px;
+        padding: 0 1px;
+        line-height: 1rem;
         color: rgba(0,0,0,.87);
-        transition: letter-spacing .218s ease-in-out;
+        text-shadow: #6E4EFF 0 1px 0.3px;
+        transition: font-weight .218s ease-in-out,
+                    text-shadow .218s ease-in-out,
+                    letter-spacing .218s ease-in-out;
+        &:first-child {
+            margin: 0 5px 0 0;
+        }
+        &:last-child {
+            margin: 0 0 0 5px;
+        }
         &:hover {
-            font-weight: 600;
-            letter-spacing: 0.05em;
-            color: #000;
+            text-shadow: rgba(0,0,0,0) 0 1px 0.1px;
+            font-weight: 700;
+            letter-spacing: 0.9px;
+            color: #2E0EBF;
         }
         &.clicked {
-            width: 100%;
+            font-size: 1rem;
             text-align: left;
             &:hover {
-                color: #000;
+                font-weight: 700;
+                letter-spacing: 0.9px;
+                color: #2E0EBF;
             }
         }
     }
