--- a/app/components/about.scss
+++ b/app/components/about.scss
@@ -1,18 +1,20 @@
 $bgColor: #F4F4F4;
+$lightPurp: #D5CCFD;
+$brightPurp: #6E4EFF;
 
 .droneBtn {
     box-sizing: border-box;
     position: relative;
     z-index: 1;
     float: right;
-    color: #9f9f9f;
+    color: $brightPurp;
     margin: 15px;
-    padding: 0 16px;
+    padding: 3px 16px 0;
     outline: none;
     font-weight: 200;
     font-family: 'Raleway', sans-serif;
     text-transform: uppercase;
-    line-height: 30px;
+    line-height: 28px;
     letter-spacing: 0.6px;
     text-align: center;
     border-radius: 2px;
@@ -36,7 +38,7 @@ $bgColor: #F4F4F4;
                     rgba(0, 0, 0, 0.2)  0px 1px 5px 0px;
     }
     &.clicked {
-        color: #c0c0c0;
+        color: $lightPurp;
         &:active {
             box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 5px 0px,
                         rgba(0, 0, 0, 0.05) 0px 1px 10px 0px,
@@ -50,13 +52,26 @@ $bgColor: #F4F4F4;
     }
 }
 
-.parallaxWrap {
+.horiHalf {
+    box-sizing: border-box;
     width: 100%;
     height: 50%;
+    overflow: hidden;
+}
+
+.parallaxWrap {
+    height: 46%;
     margin: 0 16px;
     background-color: $bgColor;
-    overflow: hidden;
     box-shadow: #000 0px 1px 7px -3px inset;
+}
+
+.bottom {
+    height: 54%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    padding: 0 0 16px;
 }
 
 .bgLayer {
@@ -64,26 +79,20 @@ $bgColor: #F4F4F4;
     height: 100%;
 }
 
-.bottomHalf {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: stretch;
+.contentWrap {
+    box-sizing: border-box;
+    padding: 24px 0 0;
     width: 100%;
-    height: 50%;
-    transition: all .218s ease-in;
+    // height: 38%;
 }
 
 .cardWrap {
+    box-sizing: border-box;
     position: relative;
     display: flex;
     flex-wrap: wrap;
     align-items: stretch;
+    padding: 15px 0;
     width: 100%;
     height: 62%;
-}
-
-.content {
-    margin: 16px;
-    padding: 12px 15px 15px;
-    width: 100%;
 }
