--- a/app/components/site-description.scss
+++ b/app/components/site-description.scss
@@ -1,9 +1,11 @@
+$darkPurp: #2E0EBF;
+$brightPurp: #6E4EFF;
 
 .content {
-    padding: 0 15px;
+    padding: 0 16px 8px;
     font-size: 1rem;
     line-height: 1.5rem;
-    margin-top: 0;
+    margin: 0;
     overflow: hidden;
 }
 
@@ -14,6 +16,6 @@
     font-family: inherit;
     color: inherit;
     &:visited {
-        color: #2E0EBF;
+        color: $darkPurp;
     }
 }
