--- a/app/components/cards/cards.scss
+++ b/app/components/cards/cards.scss
@@ -2,6 +2,7 @@ $darkPurp: #2E0EBF;
 $brightPurp: #6E4EFF;
 
 .cContent {
+    font-family: inherit;
     box-sizing: border-box;
     position: absolute;
     top: 0;
@@ -23,7 +24,7 @@ $brightPurp: #6E4EFF;
     .inlineLink {
         cursor: pointer;
         text-decoration: none;
-        font-weight: 600;
+        font-weight: 700;
         font-family: inherit;
         color: inherit;
         &:visited {
@@ -32,19 +33,20 @@ $brightPurp: #6E4EFF;
     }
     .contentBlock {
         flex-grow: 0.8;
-        padding: 0 1px 16px;
-        font-size: 1.3rem;
-        line-height: 1.5rem;
+        padding: 0 1px 31px;
+        font-family: 'Lekton', sans-serif;
+        font-size: 1rem;
+        line-height: 1.4rem;
         letter-spacing: 0.38px;
-        font-family: 'Raleway', sans-serif;
+        color: #555;
     }
 }
 
 .linksWrap {
-    font-family: 'Raleway';
+    font-family: 'Lekton', sans-serif;
     box-sizing: border-box;
-    padding-bottom: 8px;
-    color: rgba(0,0,0,0.38);
+    padding-bottom: 15px;
+    color: #555;
     &.clicked {
         padding-bottom: 0;
     }
@@ -56,7 +58,7 @@ $brightPurp: #6E4EFF;
         text-transform: uppercase;
         font-size: 0.9rem;
         font-weight: 700;
-        letter-spacing: 0.9px;
+        letter-spacing: 1px;
         margin: 0 8px;
         padding: 3px 1px;
         line-height: 1rem;
@@ -76,8 +78,8 @@ $brightPurp: #6E4EFF;
         }
         &:hover {
             font-weight: 400;
-            letter-spacing: 1.1px;
-            color: rgba(0,0,0,.87);
+            letter-spacing: 1.4px;
+            color: #555;
             background-size: 100% 100%;
         }
         &.clicked {
@@ -86,8 +88,8 @@ $brightPurp: #6E4EFF;
             text-align: left;
             &:hover {
                 font-weight: 400;
-                letter-spacing: 1.1px;
-                color: rgba(0,0,0,.87);
+                letter-spacing: 1.4px;
+                color: #555;
                 background-size: 100% 100%;
             }
         }
