--- a/app/components/footer.scss
+++ b/app/components/footer.scss
@@ -1,6 +1,7 @@
 .footerText {
     display: block;
     text-align: center;
-    font-weight: 500;
-    font-family: 'Raleway';
+    font-weight: 300;
+    letter-spacing: 1px;
+    font-family: 'Poppins', sans-serif;
 }
