--- a/app/components/site-description.scss
+++ b/app/components/site-description.scss
@@ -12,7 +12,7 @@ $brightPurp: #6E4EFF;
     line-height: 1.5rem;
     color: #555;
     margin: 0;
-    padding: 0 16px 8px;
+    padding: 0 16px 0;
     overflow: hidden;
 }
 
