--- a/app/components/cards/about-me/skills.scss
+++ b/app/components/cards/about-me/skills.scss
@@ -8,7 +8,7 @@
     &.show {
         pointer-events: all;
         height: initial;
-        padding: 0 0 38px;
+        padding: 15px 0 38px;
         transition: opacity .618s ease-out;
         opacity: 1;
         .subTitle {
@@ -25,7 +25,7 @@
         font-size: 0.95rem;
         line-height: 1.4rem;
         letter-spacing: 0.38px;
-        color: #555;
+        color: #444;
         padding: 0 1px;
         width: 100%;
         min-height: 38px;
