--- a/app/components/cards/projects/projects-list.scss
+++ b/app/components/cards/projects/projects-list.scss
@@ -9,12 +9,6 @@
         font-family: inherit;
         padding: 0 1px 5px;
     }
-    // :first-child {
-    //     padding: 0 5px 5px 0;
-    // }
-    // :last-child {
-    //     padding: 0 0 5px 5px;
-    // }
 }
 
 .pDetailWrap {
@@ -24,10 +18,10 @@
         width: 100%;
         color: #444;
         font-family: inherit;
-        font-size: 0.9rem;
         font-weight: 400;
-        line-height: 1rem;
-        letter-spacing: 0.38px;
+        font-size: 0.9rem;
+        line-height: 1.25rem;
+        // letter-spacing: 0.38px;
         text-align: right;
         opacity: 0;
         transition: opacity .218s ease-in;
