started responsifying stuffs

--- a/app/components/greeting-footer.scss
+++ b/app/components/greeting-footer.scss
@@ -11,8 +11,8 @@
     }
     .contentWrap {
         margin: auto;
-        width: 5rem;
-        height: 5rem;
+        width: 90px;
+        height: 90px;
          & {
              transform: rotate(45deg);
          }
