--- a/app/components/greeting.scss
+++ b/app/components/greeting.scss
@@ -49,7 +49,7 @@
     font-size: 8rem;
     font-style: italic;
     line-height: 7rem;
-    padding-right: 1rem; 
+    padding-right: 1rem;
 }
 
 .title4 {
@@ -81,7 +81,7 @@
 
 .footWrap {
     box-sizing: border-box;
-    margin: auto auto -5rem;
+    margin: auto auto -90px;
     background: transparent;
     will-change: filter;
     :first-child {
