--- a/docs/main.css
+++ b/docs/main.css
@@ -234,18 +234,18 @@
 ._2nXX6e7gkT0u7qPL8Qbtf6 {
   box-sizing: border-box;
   padding: 15px 0 0;
-  width: 100%;
-  height: 45%; }
+  width: 100%; }
 
 ._13e3P900VEUIoUT8-ktmK3 {
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
   position: relative;
+  bottom: 0;
   display: flex;
   flex-wrap: wrap;
   align-items: stretch;
   width: 100%;
-  height: 55%; }
+  min-height: 55%; }
 ._206JjsSKBhUyYxgzsYTvNc {
   display: block;
   text-align: center;
@@ -326,7 +326,7 @@
 
 ._2Y4V7JTCCYodYRFg08sAAT {
   box-sizing: border-box;
-  margin: auto auto -5rem;
+  margin: auto auto -90px;
   background: transparent;
   will-change: filter; }
   ._2Y4V7JTCCYodYRFg08sAAT :first-child {
@@ -373,19 +373,35 @@
     margin: 3px 0 0 3px; }
 @media screen and (max-width: 499px) {
   html {
+    font-size: 10px; } }
+
+@media screen and (max-width: 499px) and (max-height: 300px) {
+  html {
     font-size: 8px; } }
 
 @media screen and (max-width: 899px) and (min-width: 500px) {
   html {
-    font-size: 10px; } }
+    font-size: 12px; } }
+
+@media screen and (max-width: 899px) and (min-width: 500px) and (max-height: 450px) {
+  html {
+    font-size: 8px; } }
 
 @media screen and (max-width: 1299px) and (min-width: 900px) {
   html {
-    font-size: 13px; } }
+    font-size: 14px; } }
+
+@media screen and (max-width: 1299px) and (min-width: 900px) and (max-height: 650px) {
+  html {
+    font-size: 12px; } }
 
 @media screen and (min-width: 1300px) {
   html {
     font-size: 18px; } }
+
+@media screen and (min-width: 1300px) and (max-height: 799px) {
+  html {
+    font-size: 14px; } }
 
 @media only screen and (min-device-width: 299px) and (max-device-width: 749px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
   html {
