--- a/app/styles.scss
+++ b/app/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lekton:400,400i,700|Poppins:200,300,400,500,700');
+// @import url('https://fonts.googleapis.com/css?family=Lekton:400,400i,700|Poppins:200,300,400,500,700');
 @import './mixins.scss';
 
 
