--- a/docs/main.css
+++ b/docs/main.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Lekton:400,400i,700|Poppins:200,300,400,500,700);.I1H-plcspvjeRmyFzoCjN {
+.I1H-plcspvjeRmyFzoCjN {
   font-family: inherit;
   box-sizing: border-box;
   position: absolute;
